examples/sample-product-chart/chart-test/reports/run-bats-f17-3-no-cloud-50116/scenario-labels-on-20260608-102939/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-08T14:30:05Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "428"
    uid: 74a66815-4d87-4e5b-87b9-0f93827a417e
  spec:
    clusterIP: 10.96.27.96
    clusterIPs:
    - 10.96.27.96
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
